Title: Creo complemento singin
Declaro signin y se creo complemento con scss

--- a/src/app/prog-functional/ejercicio/ejercicio.component.html
+++ b/src/app/prog-functional/ejercicio/ejercicio.component.html
@@ -1,6 +1,7 @@
 <table>
     <tr>
         <td>
+            
             <pre> {{ activeCustomer | json }} </pre>
             <button (click)="filterActiveCustomers(true)"> Filtrar por activo </button>
         </td>
@@ -29,7 +30,7 @@
             <pre> {{ obsState | json }} </pre>
         </td>
         <td>
-            <button (click)="getCustomerById('a21s2d2w2')"> Funcion Pura </button>
+            <button (click)="getCustomerById('123445aaas454')"> Funcion Pura </button>
             <pre> {{ getCustomerById | json }} </pre>
         </td>
     </tr>
