--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-toolbar></app-toolbar>
 <router-outlet></router-outlet>
-<app-ejercicio> </app-ejercicio>
+<!-- <app-ejercicio> </app-ejercicio> -->
