--- a/src/app/components/desktop/desktop.component.html
+++ b/src/app/components/desktop/desktop.component.html
@@ -1,4 +1,6 @@
-
-<router-outlet></router-outlet>
+<app-desktop-navbar></app-desktop-navbar>
 
 <h1>DESKTOP!!</h1>
+<router-outlet></router-outlet>
+
+
