creacion html singup y singin y colocacion de ruta en app routing

--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -1,1 +1,13 @@
+<form action="#" method="get">
 
+  <div>
+    <label for="email">Correo electrónico:</label>
+    <input type="email" id="email" name="email">
+  </div>
+  <div>
+    <label for="password">Contraseña:</label>
+    <input type="password" id="password" name="password">
+  </div>
+
+  <button type="submit">Ingresar</button>
+</form>
