--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -1,23 +1,16 @@
 <mat-card>
   <mat-card-content>
     <form>
-      <h2>Log In</h2>
-      <mat-error>
-        The username and password were not recognized
-      </mat-error>
+      <h2>Sing In</h2>
       <mat-form-field>
         <input matInput placeholder="Email" name="username" required>
-        <mat-error>
-          Please provide a valid email address
-        </mat-error>
       </mat-form-field>
       <mat-form-field>
         <input matInput type="password" placeholder="Password" name="password" required>
-        <mat-error>
-          Please provide a valid password
-        </mat-error>
       </mat-form-field>
       <button mat-raised-button color="primary">Login</button>
+      <h3>¿No tienes una cuenta?</h3>
+      <button mat-raised-button color="primary">¡Regístrate gratis!</button>
     </form>
   </mat-card-content>
 </mat-card>
