--- a/src/app/components/shared/desktop-navbar/desktop-navbar.component.html
+++ b/src/app/components/shared/desktop-navbar/desktop-navbar.component.html
@@ -1,1 +1,23 @@
-<p>desktop-navbar works!</p>
+<p>
+  <mat-toolbar color="primary">
+    <span routerLink="">Virtual Banking APP - User Desktop </span>
+    <span class="spacer"></span>
+
+    <button class="desk-navbar-button" mat-raised-button routerLink="/signup">
+      <mat-icon>assignment_ind</mat-icon> Operations
+    </button>
+
+    <button class="desk-navbar-button" mat-raised-button routerLink="/signup">
+      <mat-icon>assignment_ind</mat-icon> Administration
+    </button>
+
+    <button class="desk-navbar-button" mat-raised-button routerLink="/signup">
+      <mat-icon>assignment_ind</mat-icon> Management
+    </button>
+    <span class="spacer"></span>
+    <button class="navbar-button" mat-fab extended color="accent"  routerLink="/logout">
+      <mat-icon>logout</mat-icon> Logout
+    </button>
+
+  </mat-toolbar>
+</p>
