--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex; flex-direction: column; align-items: center;">
   <h2 class="h3" >Registro de movimiento  </h2>
 
-<button type="button" class="btn btn-primary" > Agregar deposito </button>
+<button (click)="openEditModal()" type="button" class="btn btn-primary" > Agregar deposito </button>
 
 </div>
