--- a/src/app/login2/singup/singup.component.html
+++ b/src/app/login2/singup/singup.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <h2 class="text-center">Registro</h2>
-  <form  [formGroup]="formRegister"  (submit)="send()">
+  <form  [formGroup]="formRegister"  >
     <div class="form-group">
       <label for="accountType">Tipo de Cuenta:</label>
       <select class="form-control" formControlName="accountType" id="accountType">
@@ -29,7 +29,7 @@
       <label for="pwd">Contraseña:</label>
       <input  formControlName="password" type="password" class="form-control" id="pwd" placeholder="Ingrese una contraseña">
     </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
+    <button (click)="send()" class="btn btn-primary">Enviar</button>
   </form>
 </div>
 
