--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -1,6 +1,7 @@
+<!-- (submit)="submitSignUp()" -->
 <body>
   <div >
-    <form (submit)="submitSignUp()" class="mapForm">
+    <form  class="mapForm"> 
       <section >
         <h1 style="margin: 15px;color:rgb(8, 82, 141);"> Registrarse</h1>
       </section>
