Commit Route Customer Data

--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -7,7 +7,7 @@
     
     <button class="boton" type="submit" >Sing In</button>
   
-    <p>Si no tienes una cuenta</p> <a href="">registrate!</a>
+    <p>No tienes una cuenta?</p> <a class= "link"  href="">Registrate!</a>
   </form>
 </section>
 
