Title: Creo toolbar con datos
Mejoro sign in con conexion a sign up

--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -4,6 +4,21 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span>My App</span>
+
+    <button >
+      <p [routerLink]="['/profile']">menu</p ><a ></a>
+    </button>
+    <button >
+      <p [routerLink]="['/ejercicio']">ejercicio</p ><a ></a>
+    </button>
+    <button >
+      <p [routerLink]="['/profile']">account</p ><a ></a>
+    </button>
+    <button >
+      <p [routerLink]="['/profile']">transfer</p ><a ></a>
+    </button>
+
+
     <span class="example-spacer"></span>
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
