--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -2,7 +2,7 @@
     <div id="formContent">
       <!-- Tabs Titles -->
       <h2 class="active"> Sign In </h2>
-      <h2 class="inactive underlineHover">Sign Up </h2>
+      <h2 class="inactive underlineHover" [routerLink]="['/SignUp']">Sign Up </h2>
   
       <!-- Icon -->
       <div class="fadeIn first">
