--- a/src/app/deposit/create-deposit/create-deposit/create-deposit.component.html
+++ b/src/app/deposit/create-deposit/create-deposit/create-deposit.component.html
@@ -1,1 +1,15 @@
-<p>create-deposit works!</p>
+<h3>Depositar proporcionando: </h3>
+<hr>
+<select name="select">
+  <option value="value1" selected> Elige una opcion </option>
+  <option value="value2">Cedula</option>
+  <option value="value3">Numero de cuenta</option>
+  <option value="value4">Telefono</option>
+</select>
+<input type="text">
+<br><br>
+<hr>
+<p>Monto: </p>
+<input type="number">
+
+<button type="submit">Enviar de una ñery, no pedimos verificacion</button>
