--- a/src/app/account/create-account/create-account.component.html
+++ b/src/app/account/create-account/create-account.component.html
@@ -1,1 +1,9 @@
-<p>create-account works!</p>
+<h1 class="text-lg-center"> Create Account </h1>
+<div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Type Account</span>
+    <input type="text" class="form-control"  aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+</div>
+<div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Customer Id</span>
+    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+</div>
