Transfer, Search, Deposit
Agrego la navegacion a los botones transfer, search y deposit

--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,9 +1,9 @@
 <div class="topnav">
-  <a class="active" href="#"[routerLink]="['/app-home']">Home</a>
-  <a href="#"[routerLink]="['/app-vista-lanzadera']">Mis datos</a>
+  <a class="active" href="#"[routerLink]="['/home']">Home</a>
+  <a href="#"[routerLink]="['/']">Mis datos</a>
   <a href="#"[routerLink]="['/']">Mis Cuentas</a>
-  <a href="#"[routerLink]="['/']">Depositos</a>
-  <a href="#"[routerLink]="['/']">Transferencias</a>
-  <a href="#"[routerLink]="['/']">Buscar</a>
-  <a href="#"[routerLink]="['/app-ejercicio']">Funcional</a>
+  <a href="#"[routerLink]="['/deposit']">Depositos</a>
+  <a href="#"[routerLink]="['/transfer']">Transferencias</a>
+  <a href="#"[routerLink]="['/search']">Buscar</a>
+  <a href="#"[routerLink]="['/ejercicio']">Funcional</a>
 </div>
