--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -9,5 +9,5 @@
     <input type="password" id="password" name="password">
   </div>
 
-  <button type="submit">Ingresar</button>
+  <button type="submit" (click)="login()">Ingresar</button>
 </form>
