--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <div class="topnav">
   <a class="active" href="#" [routerLink]="['/app-home']">Home</a>
   <a href="#" [routerLink]="['/app-vista-lanzadera']">Mis datos</a>
-  <a href="#" [routerLink]="['/']">Mis Cuentas</a>
+  <a href="#" [routerLink]="['/app-account']">Mis Cuentas</a>
   <a href="#" [routerLink]="['/']">Depositos</a>
   <a href="#" [routerLink]="['/']">Transferencias</a>
   <a href="#" [routerLink]="['/']">Buscar</a>
