--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -19,7 +19,7 @@
 
 <div class="topnav">
   <a class="active" href="#"[routerLink]="['/app-home']">Home</a>
-  <a href="#"[routerLink]="['/app-my-accounts']">Mis datos</a>
+  <a href="#"[routerLink]="['/app-user-profile']">Mis datos</a>
   <a href="#"[routerLink]="['/app-my-accounts']">Mis Cuentas</a>
   <a href="#"[routerLink]="['/']">Depositos</a>
   <a href="#"[routerLink]="['/']">Transferencias</a>
