--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -1,17 +1,21 @@
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-      <form>
-        <div class="form-group">
-          <label for="destinationAccount">Transferencia a:</label>
-          <input type="text" class="form-control" id="destinationAccount" name="destinationAccount">
-        </div>
-        <div class="form-group">
-          <label for="amount">Monto:</label>
-          <input type="text" class="form-control" id="amount" name="amount">
-        </div>
-        <button type="submit" class="btn btn-primary">Validar</button>
-      </form>
-    </div>
-  </div>
+
+<div style="display: flex; flex-direction: column; align-items: center;">
+  <h2 class="h3" >Registro de Transferencia </h2>
+
+<button (click)="openEditModal()" type="button" class="btn btn-primary" > Hacer Transferencia</button>
+
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
