--- a/src/app/login/sing-up/sing-up.component.html
+++ b/src/app/login/sing-up/sing-up.component.html
@@ -6,24 +6,41 @@
           <h2 class="text-center text-2xl font-bold tracking-wide text-gray-800">Registrarse</h2>
           <p class="text-center text-sm text-gray-600 mt-2">¿Ya tienes una cuenta? <a href="#" class="text-blue-600 hover:text-blue-700 hover:underline" title="Sign In">Inicia sesión aquí</a></p>
 
-          <form class="my-8 text-sm">
+          <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="my-8 text-sm">
               <div class="flex flex-col my-4">
                   <label for="name" class="text-gray-700">Nombre</label>
-                  <input type="text" name="name" id="name" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduzca su nombre">
+                  <input type="text" name="name" id="name" formControlName="name" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduzca su nombre" required>
               </div>
 
               <div class="flex flex-col my-4">
                   <label for="email" class="text-gray-700">Correo electrónico</label>
-                  <input type="email" name="email" id="email" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduce tu correo electrónico">
+                  <input type="email" name="email" id="email" formControlName="email" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduce tu correo electrónico" required>
+              </div>
+
+              <div class="flex flex-col my-4">
+                <label for="documentType" class="text-gray-700">Tipo de documento:</label>
+                <select #documentsTypes type="text" name="documentType" id="documentType" formControlName="documentType" (change)="switchDocumentType(+documentsTypes.value)" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900">
+                  <option *ngFor="let option of documentTypes" value="{{option.value}}">{{option.name}}</option>
+                </select>
+              </div>
+
+              <div class="flex flex-col my-4">
+                <label for="document" class="text-gray-700">Documento:</label>
+                <input type="text" name="document" id="document" formControlName="document" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduzca su {{documentTypeCurrent}}" required>
+              </div>
+
+              <div class="flex flex-col my-4">
+                <label for="phone" class="text-gray-700">Telefono/celular</label>
+                <input type="number" name="phone" id="phone" formControlName="phone" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduzca su telefono/celular" required>
               </div>
 
               <div class="flex flex-col my-4">
                   <label for="password" class="text-gray-700">Contraseña</label>
                   <div class="relative flex items-center mt-2">
-                      <input name="password" id="password" class="flex-1 p-2 border pr-10 border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Ingresa tu contraseña" [type]="this.show ? 'password' : 'text'">
+                      <input name="password" id="password" formControlName="password" class="flex-1 p-2 border pr-10 border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Ingresa tu contraseña" [type]="this.show ? 'password' : 'text'" required>
                       <button (click)="switchPassword()" type="button" class="absolute right-2 bg-transparent flex items-center justify-center text-gray-700">
-                          <svg *ngIf="this.show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path></svg>
-                          <svg *ngIf="!this.show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
+                          <svg *ngIf="show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path></svg>
+                          <svg *ngIf="!show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
                       </button>
                   </div>
               </div>
@@ -31,21 +48,21 @@
               <div class="flex flex-col my-4">
                   <label for="password_confirmation" class="text-gray-700">Confirmar contraseña</label>
                   <div class="relative flex items-center mt-2">
-                      <input name="password_confirmation" id="password_confirmation" class="flex-1 p-2 pr-10 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduce tu contraseña una vez más" [type]="this.show ? 'password' : 'text'">
+                      <input name="password_confirmation" id="password_confirmation" formControlName="password_confirmation" class="flex-1 p-2 pr-10 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduce tu contraseña una vez más" [type]="this.show ? 'password' : 'text'" required>
                       <button (click)="switchPassword()" type="button" class="absolute right-2 bg-transparent flex items-center justify-center text-gray-700">
-                          <svg *ngIf="this.show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path></svg>
-                          <svg *ngIf="!this.show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
+                          <svg *ngIf="show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path></svg>
+                          <svg *ngIf="!show" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
                       </button>
                   </div>
               </div>
 
               <div class="flex items-center">
-                  <input type="checkbox" name="remember_me" id="remember_me" class="mr-2 focus:ring-0 rounded">
-                  <label for="remember_me" class="text-gray-700">He leído y acepto los <a href="#" class="text-blue-600 hover:text-blue-700 hover:underline">términos y condiciones</a> de uso</label>
+                  <input type="checkbox" name="read" id="read" formControlName="read" class="mr-2 focus:ring-0 rounded" required>
+                  <label for="read" class="text-gray-700">He leído y acepto los <a href="#" class="text-blue-600 hover:text-blue-700 hover:underline">términos y condiciones</a> de uso</label>
               </div>
 
               <div class="my-4 flex items-center justify-end space-x-4">
-                  <button class="bg-blue-600 hover:bg-blue-700 rounded-lg px-8 py-2 text-gray-100 hover:shadow-xl transition duration-150 uppercase">Registrarse</button>
+                  <button type="submit" class="bg-blue-600 hover:bg-blue-700 rounded-lg px-8 py-2 text-gray-100 hover:shadow-xl transition duration-150 uppercase">Registrarse</button>
               </div>
           </form>
       </div>
