--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -2,8 +2,6 @@
   <a class="active" href="#" [routerLink]="['/app-home']">Home</a>
   <a href="#" [routerLink]="['/app-vista-lanzadera']">Mis datos</a>
   <a href="#" [routerLink]="['/app-account']">Mis Cuentas</a>
-  <a href="#" [routerLink]="['/']">Depositos</a>
-  <a href="#" [routerLink]="['/']">Transferencias</a>
-  <a href="#" [routerLink]="['/']">Buscar</a>
+  <a href="#" [routerLink]="['/app-transfer']">Transferencias</a>
   <a href="#" [routerLink]="['/app-ejercicio']">Funcional</a>
 </div>
