--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -5,8 +5,8 @@
     <input class="controls" type="text" id="tipo" name="tipo"  placeholder="Usuario">
     <input class="controls" type="text" id="nombre" name="nombre"  placeholder="Contraseña">
     
-    <button class="boton" type="submit" >Sing In</button>
-  
+    <button class="boton"  (click)="activeLogged()"   >Sing In</button>
+   
     <p>No tienes una cuenta?</p> <a class= "link"  href="">Registrate!</a>
   </form>
 </section>
