--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -8,7 +8,7 @@
       <mat-form-field>
         <input matInput type="password" placeholder="Password" name="password" required>
       </mat-form-field>
-      <button mat-raised-button color="primary">Login</button>
+      <button mat-raised-button color="primary" (click)="activeLogin()">Login</button>
       <h3>¿No tienes una cuenta?</h3>
       <button mat-raised-button color="primary">¡Regístrate gratis!</button>
     </form>
