--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -4,7 +4,7 @@
         <input class="controls" type="text" id="tipo" name="tipo" placeholder="Usuario">
         <input class="controls" type="text" id="nombre" name="nombre" placeholder="Contraseña">
 
-        <button class="boton" type="submit">Login</button>
+        <button class="boton" type="submit" (click)="activeLogin()">Login</button>
         <p>Aun no tenes cuenta con nosotros?</p>
         <button class="boton" type="submit">Sign Up</button>
     </form>
