--- a/src/app/login/singup/singup.component.html
+++ b/src/app/login/singup/singup.component.html
@@ -6,7 +6,7 @@
         <input class="controls" type="text" id="telefono" name="telefono" placeholder="Telefono">
         <input class="controls" type="text" id="correo" name="correo" placeholder="Correo">
 
-        <button class="boton" type="submit">Login</button>
+        <button class="boton" type="submit" (click)="activeLogin()">Login</button>
         <p>No tienes una cuenta?</p>
         <button class="boton" type="submit">Sign Up</button>
     </form>
