--- a/src/app/login/singin/singin.component.html
+++ b/src/app/login/singin/singin.component.html
@@ -1,4 +1,4 @@
-<form class="mapFrom" style="margin: 10%;" >
+<form class="align-items-center" style="margin: 10%;" >
 	<div>
 		<section >
 			<h1 style="margin: 15px;color:rgb(8, 82, 141);font-family:'Times New Roman', Times, serif;font-size: 25px;" > Ingreso de Usuario</h1>
@@ -11,7 +11,7 @@
 				<label for="inputPassword4" class="form-label">Password</label>
 				<input type="password" class="form-control" id="inputPassword4">
 		</div>
-		<a routerLink="/signUp" style="margin: 10%;" >Sign Up</a>
+		<a href="signUp" style="margin: 10%;" >Sign Up</a>
 		<div class="col-12" style="top: 20px;">
 			<button type="submit" class="btn btn-primary" style="width: 250px;" >Ingresar</button>
 		</div>
