--- a/src/app/account/create-account-type/create-account-type.component.html
+++ b/src/app/account/create-account-type/create-account-type.component.html
@@ -1,12 +1,9 @@
-<h1 class="text-lg-center"> Create Account </h1>
+<h1 class="text-lg-center"> Create Type Account </h1>
 <div class="input-group mb-3">
-    <span class="input-group-text" id="inputGroup-sizing-default">Type Account</span>
+    <span class="input-group-text" id="inputGroup-sizing-default">Name Type Account</span>
     <input type="text" class="form-control"  aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
 </div>
-<div class="input-group mb-3">
-    <span class="input-group-text" id="inputGroup-sizing-default">Customer Id</span>
-    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-</div>
+
 <div class="col-12">
     <div class="form-check">
       <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
@@ -18,7 +15,6 @@
       </div>
     </div>
   </div>
-  <a href="account/account-type/create">Create Type Account</a>
   <div class="col-12">
-    <button class="btn btn-primary" type="submit" routerLink="account/find-all" routerLinkActive="router-link-active" >Confirm</button>
+    <button class="btn btn-primary" type="submit" routerLink="account/account-type/create" routerLinkActive="router-link-active" >Confirm</button>
   </div>
