--- a/src/app/deposit/create-deposit/create-deposit.component.html
+++ b/src/app/deposit/create-deposit/create-deposit.component.html
@@ -1,1 +1,25 @@
-<p>create-deposit works!</p>
+<h1 class="text-lg-center"> Create Deposit </h1>
+<div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Account Id</span>
+    <input type="number" class="form-control"  aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+</div>
+
+<div class="input-group mb-3">
+    <span class="input-group-text" id="inputGroup-sizing-default">Amount</span>
+    <input type="number" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+</div>
+
+<div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+      <label class="form-check-label" for="invalidCheck">
+        Agree to terms and conditions
+      </label>
+      <div class="invalid-feedback">
+        You must agree before submitting.
+      </div>
+    </div>
+  </div>
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit" href = "deposit/list">Confirm</button>
+</div>
