--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -11,7 +11,7 @@
   <br>
   <button [routerLink]="['/account']"class="btn btn-primary mb-2">Confirmar</button>
   <br>
-  <button class="btn btn-danger">Borrar cuenta</button>
+  <button   (click)="alertError()"   class="btn btn-danger">Borrar cuenta</button>
 </div>
 
 
