--- a/src/app/modules/shared/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div class="topnav">
+<!--<div class="topnav">
   <a class="active" href="#"[routerLink]="['/home']">Home</a>
   <a href="#"[routerLink]="['/']">Mis datos</a>
   <a href="#"[routerLink]="['/']">Mis Cuentas</a>
@@ -6,4 +6,25 @@
   <a href="#"[routerLink]="['/transfer']">Transferencias</a>
   <a href="#"[routerLink]="['/search']">Buscar</a>
   <a href="#"[routerLink]="['/ejercicio']">Funcional</a>
+</div>-->
+
+<div class="menu">
+  <header>
+      <div class="divheader">
+          <nav class="navbar">
+              <div>
+                  <h2>Banco Tironi</h2>
+              </div>
+              <ul class="botones">
+                <a href="#"[routerLink]="['/home']">Home</a>
+                <a href="#"[routerLink]="['/']">Mis datos</a>
+                <a href="#"[routerLink]="['/']">Mis Cuentas</a>
+                <a href="#"[routerLink]="['/deposit']">Depositos</a>
+                <a href="#"[routerLink]="['/transfer']">Transferencias</a>
+                <a href="#"[routerLink]="['/search']">Buscar</a>
+                <a href="#"[routerLink]="['/ejercicio']">Funcional</a>
+              </ul>
+          </nav>
+      </div>
+  </header>
 </div>
