--- a/src/app/modules/shared/toolbar/toolbar.component.scss
+++ b/src/app/modules/shared/toolbar/toolbar.component.scss
@@ -1,4 +1,4 @@
-.topnav {
+/*.topnav {
   background-color:  #212127;
   overflow: hidden;
 }
@@ -21,4 +21,50 @@
   color: rgb(248, 250, 248);
   font-weight: 500;
   background:linear-gradient(to right, rgb(130,226,68), #6019e0);
+}
+*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.menu{
+  width: 100%;
+  height: 5%;
+  background-color: #191c32;
+  color: white;
+}
+
+.divheader{
+  background-color: #191c32;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+  top: 0%;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+}
+
+.botones {
+  display: flex;
+  width: 50%;
+  justify-content: space-around;
+}
+
+.botones a {
+  color: white;
+  text-decoration: none;
+}
+
+.botones li{
+  list-style: none;
+}
+
+.botones a:hover{
+  color: aqua;
 }
