--- a/src/app/transfer/transfer-list/transfer-list.component.html
+++ b/src/app/transfer/transfer-list/transfer-list.component.html
@@ -1,1 +1,25 @@
-<p>transfer-list works!</p>
+<table class="table" >
+
+    <thead>
+      <tr>
+        <th scope="col">Transfer Id </th>
+        <th scope="col">Outcome</th>
+        <th scope="col">Income</th>
+        <th scope="col">Amount</th>
+        <th scope="col">Reason</th>
+        <th scope="col">Date time</th>
+      </tr>
+    </thead>
+
+    <tbody  *ngFor="let account of lisAccounts">
+
+      <tr>
+        <td>{{account.id}}</td>
+        <td>{{account.coustomer_id.fullName}}</td>
+        <td>{{account.account_type_id.name}}</td>
+        <td>{{account.balance}}</td>
+        <td>{{account.state}}</td>
+      </tr>
+
+    </tbody>
+</table>
