--- a/src/app/login/singin/singin.component.scss
+++ b/src/app/login/singin/singin.component.scss
@@ -1,3 +1,12 @@
+// Material
+// form
+:host {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+// Login
 .comienzo {
     text-align: center;
     font-size: 19px;
