Navbar & auth improved
+ improved authentication of user login
+ navbar changes content with user status
+ some deprecated components removed

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,12 +1,37 @@
+<mat-toolbar color="primary" *ngIf="(authService.authenticated$ | async) === false; else privateNavbar">
+
+  <span routerLink="/">Virtual Banking APP</span>
+  <span class="spacer"></span>
+  <button class="navbar-button" mat-fab extended color="accent" routerLink="/signup">
+    <mat-icon>assignment_ind</mat-icon> Sign Up
+  </button>
+  <button class="navbar-button" mat-fab extended color="accent" routerLink="/login">
+    <mat-icon>login</mat-icon> Login
+  </button>
+
+</mat-toolbar>
+
+<ng-template #privateNavbar>
 
   <mat-toolbar color="primary">
-    <span routerLink="/">Virtual Banking APP</span>
+    <span routerLink="">Virtual Banking APP - User Desktop </span>
     <span class="spacer"></span>
-    <button class="navbar-button" mat-fab extended color="accent" routerLink="/signup">
-      <mat-icon>assignment_ind</mat-icon> Sign Up
+
+    <button class="desk-navbar-button" mat-raised-button routerLink="/desktop/operation">
+      <mat-icon>assignment_ind</mat-icon> Operations
     </button>
-    <button class="navbar-button" mat-fab extended color="accent" routerLink="/login">
-      <mat-icon>login</mat-icon> Login
+
+    <button class="desk-navbar-button" mat-raised-button routerLink="/desktop/administration">
+      <mat-icon>assignment_ind</mat-icon> Administration
+    </button>
+
+    <button class="desk-navbar-button" mat-raised-button routerLink="/desktop/management">
+      <mat-icon>assignment_ind</mat-icon> Management
+    </button>
+
+    <span class="spacer"></span>
+    <button class="navbar-button" mat-fab extended color="accent" routerLink="/">
+      <mat-icon>logout</mat-icon> Logout
     </button>
   </mat-toolbar>
-
+</ng-template>
