--- a/src/app/modules/shared/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/toolbar/toolbar.component.html
@@ -23,6 +23,7 @@
                 <a href="#"[routerLink]="['/transfer']">Transferencias</a>
                 <a href="#"[routerLink]="['/search']">Buscar</a>
                 <a href="#"[routerLink]="['/ejercicio']">Funcional</a>
+                <a (click)="logOut()">Log Out</a>
               </ul>
           </nav>
       </div>
