--- a/src/app/modules/login/singup/singup.component.html
+++ b/src/app/modules/login/singup/singup.component.html
@@ -3,10 +3,22 @@
     <form>
       <h2>Sign Up</h2>
       <mat-form-field>
-        <input matInput placeholder="Email" name="username" required>
+        <input matInput placeholder="Full Name" name="fullname" required>
       </mat-form-field>
       <mat-form-field>
         <input matInput type="password" placeholder="Password" name="password" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Document Type" name="documentType" required>
+      </mat-form-field>
+            <mat-form-field>
+        <input matInput placeholder="Document" name="document" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Email" name="email" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Phone" name="phone" required>
       </mat-form-field>
       <button mat-raised-button color="primary">Login</button>
       <h3>¿Ya tienes una cuenta? </h3>
