--- a/src/app/modules/shared/home/home.component.html
+++ b/src/app/modules/shared/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="components">
-<app-singin *ngIf= true></app-singin>
-<app-singup *ngIf= false></app-singup>
+<app-singin *ngIf= false></app-singin>
+<app-singup *ngIf= true></app-singup>
 </div>
