--- a/src/app/modules/shared/toolbar/toolbar.component.html
+++ b/src/app/modules/shared/toolbar/toolbar.component.html
@@ -1,13 +1,3 @@
-<!--<div class="topnav">
-  <a class="active" href="#"[routerLink]="['/home']">Home</a>
-  <a href="#"[routerLink]="['/']">Mis datos</a>
-  <a href="#"[routerLink]="['/']">Mis Cuentas</a>
-  <a href="#"[routerLink]="['/deposit']">Depositos</a>
-  <a href="#"[routerLink]="['/transfer']">Transferencias</a>
-  <a href="#"[routerLink]="['/search']">Buscar</a>
-  <a href="#"[routerLink]="['/ejercicio']">Funcional</a>
-</div>-->
-
 <div class="menu">
   <header>
       <div class="divheader">
@@ -23,7 +13,7 @@
                 <a href="#"[routerLink]="['/transfer']">Transferencias</a>
                 <a href="#"[routerLink]="['/search']">Buscar</a>
                 <a href="#"[routerLink]="['/ejercicio']">Funcional</a>
-                <a (click)="logOut()">Log Out</a>
+                <a href="#" (click)="logOut()">Log Out</a>
               </ul>
           </nav>
       </div>
