--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,28 +1,28 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="">e-Bank</a>
+    <a class="navbar-brand" routerLink="">e-Bank</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" (click)="link('/')" aria-current="page">Sign in</a>
+          <a class="nav-link active" routerLink="/" aria-current="page">Sign in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  (click)="link('/account/find-all')">Account</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" (click)="link('/customerList')">Customer</a>
+          <a class="nav-link"  routerLink="/account/find-all">Account</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" (click)="link('/transfer')">Transfer</a>
+          <a class="nav-link" routerLink="/customerList">Customer</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" (click)="link('/deposit')">Deposit</a>
+          <a class="nav-link"  routerLink="/transfer">Transfer</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/deposit">Deposit</a>
         </li>
 
       </ul>
