added jwt token managment and login

--- a/src/app/login/sing-in/sing-in.component.html
+++ b/src/app/login/sing-in/sing-in.component.html
@@ -6,11 +6,11 @@
           <h2 class="text-center text-2xl font-bold tracking-wide text-gray-800">Iniciar sesión</h2>
           <p class="text-center text-sm text-gray-600 mt-2">¿No tienes una cuenta? <a (click)="redirect('sign-up')" class="text-blue-600 hover:text-blue-700 hover:underline">Registrate</a></p>
 
-          <form class="my-8 text-sm" [formGroup]="signinForm">
+          <form class="my-8 text-sm" [formGroup]="signinForm" (ngSubmit)="onSubmit()">
 
               <div class="flex flex-col my-4">
                   <label for="email" class="text-gray-700">Correo electrónico</label>
-                  <input type="email" name="email" id="email" formControlName="email" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduce tu correo electrónico" required>
+                  <input type="email" name="email" id="email" formControlName="email" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduce tu correo electrónico" email required>
               </div>
 
               <div class="flex flex-col my-4">
