--- a/src/app/login/sing-up/sing-up.component.html
+++ b/src/app/login/sing-up/sing-up.component.html
@@ -14,7 +14,7 @@
 
               <div class="flex flex-col my-4">
                   <label for="email" class="text-gray-700">Correo electrónico</label>
-                  <input type="email" name="email" id="email" formControlName="email" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduce tu correo electrónico" required>
+                  <input type="email" name="email" id="email" formControlName="email" class="mt-2 p-2 border border-gray-300 focus:outline-none focus:ring-0 focus:border-gray-300 rounded text-sm text-gray-900" placeholder="Introduce tu correo electrónico" email required>
               </div>
 
               <div class="flex flex-col my-4">
