--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,4 +1,5 @@
-<div class="min-h-full" *ngIf="this.currentRoute !== '/sign-in' && this.currentRoute !== '/sign-up'">
+<div class="min-h-full
+" *ngIf="this.currentRoute !== '/sign-in' && this.currentRoute !== '/sign-up'">
   <nav class="bg-gray-800">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
       <div class="flex h-16 items-center justify-between">
